[gd_scene load_steps=13 format=3 uid="uid://b8wp2a63mdlcm"]

[ext_resource type="StyleBox" uid="uid://dtd5frn54bsps" path="res://Components/Sidebar/Theme/SidebarDark.tres" id="1_fngin"]
[ext_resource type="Texture2D" uid="uid://paige6pop8p2" path="res://Assets/Buttons/TimeTrackBtnWhite.png" id="1_rgyal"]
[ext_resource type="Texture2D" uid="uid://cagxfysnenkwc" path="res://Assets/Icons/MD_concept.png" id="2_q75nu"]
[ext_resource type="Script" path="res://Components/Sidebar/Sidebar.gd" id="2_qyg0n"]
[ext_resource type="Texture2D" uid="uid://dfsle7iw1ehmk" path="res://Assets/Icons/NoteTaking.png" id="3_qojab"]
[ext_resource type="Script" path="res://Components/Sidebar/SidebarButton.gd" id="4_bnq2m"]
[ext_resource type="Texture2D" uid="uid://cnjgxgadqpqge" path="res://Assets/Icons/TimeTracking.png" id="4_pr60g"]
[ext_resource type="Texture2D" uid="uid://dv38s6epnc64t" path="res://Assets/Icons/ToDo.png" id="5_2e4px"]
[ext_resource type="Texture2D" uid="uid://dwb4j2rebc16e" path="res://Assets/Icons/gamepad.png" id="6_krgdy"]
[ext_resource type="Texture2D" uid="uid://bdwia3cfenhns" path="res://Assets/Icons/Profile.png" id="7_d4x38"]
[ext_resource type="Texture2D" uid="uid://had50fou2noj" path="res://Assets/Icons/Settings.png" id="8_840gu"]

[sub_resource type="Theme" id="Theme_7hp5c"]

[node name="Sidebar" type="Panel"]
custom_minimum_size = Vector2(50, 0)
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 50.0
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_fngin")
script = ExtResource("2_qyg0n")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="TopButtons" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="TimeTrackingButton" type="TextureButton" parent="MarginContainer/TopButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
texture_normal = ExtResource("1_rgyal")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("4_bnq2m")

[node name="CenterButtons" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="HomeButton" type="TextureButton" parent="MarginContainer/CenterButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
theme = SubResource("Theme_7hp5c")
texture_normal = ExtResource("2_q75nu")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("4_bnq2m")

[node name="NotesButton" type="TextureButton" parent="MarginContainer/CenterButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
texture_normal = ExtResource("3_qojab")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("4_bnq2m")

[node name="TimeTracksButton" type="TextureButton" parent="MarginContainer/CenterButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
texture_normal = ExtResource("4_pr60g")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("4_bnq2m")

[node name="TodosButton" type="TextureButton" parent="MarginContainer/CenterButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
texture_normal = ExtResource("5_2e4px")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("4_bnq2m")

[node name="GamesButtons" type="TextureButton" parent="MarginContainer/CenterButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
texture_normal = ExtResource("6_krgdy")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("4_bnq2m")

[node name="BottomButtons" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 30

[node name="ProfileButton" type="TextureButton" parent="MarginContainer/BottomButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
texture_normal = ExtResource("7_d4x38")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("4_bnq2m")

[node name="SettingsButton" type="TextureButton" parent="MarginContainer/BottomButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
texture_normal = ExtResource("8_840gu")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("4_bnq2m")

[connection signal="pressed" from="MarginContainer/TopButtons/TimeTrackingButton" to="." method="_on_time_tracking_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterButtons/HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterButtons/NotesButton" to="." method="_on_notes_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterButtons/TimeTracksButton" to="." method="_on_time_tracks_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterButtons/TodosButton" to="." method="_on_todos_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterButtons/GamesButtons" to="." method="_on_games_buttons_pressed"]
[connection signal="pressed" from="MarginContainer/BottomButtons/ProfileButton" to="." method="_on_profile_button_pressed"]
[connection signal="pressed" from="MarginContainer/BottomButtons/SettingsButton" to="." method="_on_settings_button_pressed"]
